fixed layout issues

--- a/source/globals/_breakpoints.scss
+++ b/source/globals/_breakpoints.scss
@@ -32,14 +32,6 @@ $bp-xlarge: '2560px';
 
 }
 
-@media only screen and (min-width: $bp-medium) {
-
-    html {
-        font-size: 18px;
-    }
-
-}
-
 @media only screen and (min-width: $bp-large) {
 
     html {
