--- a/source/main.scss
+++ b/source/main.scss
@@ -1,7 +1,7 @@
 @forward 'globals';
 
 .wrapper {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #E6E6E6;
     padding-block: 2rem;
 
     input, button {
